crates/lemnos-macros/tests/ui/driver_kind_interface_mismatch.stderr
error: driver kind `GpioLine` does not match interface `I2c`
 --> tests/ui/driver_kind_interface_mismatch.rs:5:12
  |
5 |     kind = GpioLine
  |            ^^^^^^^^
